tests/runtime/top_handler.m31.ref
Operation auto is declared.
Rule A is postulated.
Rule a is postulated.
Rule B is postulated.
Rule b is postulated.
Rule prod is postulated.
Rule pair is postulated.
Exception Auto_cannot_infer is declared.
- :> judgement = ⊢ a : A
- :> judgement = ⊢ pair A B a b : prod A B
- :> judgement = ⊢ pair (prod A B) A (pair A B a b) a : prod (prod A B) A
File "./runtime/top_handler.m31", line 25, characters 1-4:
Runtime error: uncaught exception Auto_cannot_infer
